# autk

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  config.h.in
autk/core/: CMakeLists.txt  core.cpp  dynamic_library.cpp  exception.cpp  object.cpp  object_data.h  signals.cpp  utf.cpp
autk/core/include/autk/: core.h
autk/core/include/autk/core/: concepts.h  convert.h  dynamic_library.h  encoding.h  exception.h  iterator.h  object.h  signals.h  types.h  unicode.h  utf.h  utility.h  vec.h
autk/core/unix/: dynamic_library.cpp  encoding.cpp
autk/core/win32/: dynamic_library.cpp  encoding.cpp  platform.cpp  platform.h
autk/display/: CMakeLists.txt  context.cpp  display.cpp  object_data.h
autk/display/include/autk/: display.h
autk/display/include/autk/display/: context.h
autk/display/include/autk/display/x11/: context.h  error.h
autk/display/x11/: context.cpp  error.cpp  library.cpp  library.h  object_data.h
cmake/toolchains/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
demos/hello_world/: CMakeLists.txt  main.cpp
demos/widget_demo/: CMakeLists.txt  main.cpp
demos/widget_demo/src/: main.cpp
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  hello.c  playground.c
include/autk/: autk.h  client.h  core.h  device.h  diagnostics.h  instance.h  math.h  style.h  types.h  window.h
include/autk/ext/: style_ext_base.h  win9x_style.h
libs/autk/: CMakeLists.txt  application.cpp  config.h.in  object.cpp  string.cpp
libs/autk/driver/: display.cpp  display.h
libs/autk/driver/win32/: display.cpp  display.h
libs/autk/include/autk/: application.h  autk.h  concepts.h  main_window.h  object.h  signal.h  string.h  strings.h  types.h  window.h
libs/autk/platform/: os.h  string.h
libs/autk/platform/unix/: os.cpp  string.cpp
libs/autk/platform/win32/: os.cpp  string.cpp
libs/autk/src/: application.cpp  main_window.cpp  strings.cpp  unicode.h  utf.cpp  utf.h  window.cpp
libs/autk/src/driver/: display.cpp  display.h  window.cpp  window.h
libs/autk/src/driver/win32/: display.cpp  display.h  window.cpp  window.h
libs/autk/src/platform/win32/: strings.cpp
libs/autk_main/: CMakeLists.txt  main.cpp  winmain.cpp
libs/autk_main/include/autk/: main.h
libs/autk_main/src/: main.cpp
src/: CMakeLists.txt  client.c  diagnostics.c  encoding.h  hash.c  hash.h  impl_math.h  impl_types.h  instance.c  os_compat.c  window.c
src/client/windows/: client.c  client.h  types.h  window.c  window.h
src/client/x11/: client.c  client.h  types.h  window.c  window.h
src/core/: client.c  device.c  diagnostics.c  instance.c  math.c  style.c  types.h  window.c
src/ext/: style_ext_base.c  win9x_style.c
src/os/: compat.c  compat.h  sync.h  types.h
src/os/posix/: job_queue.c  job_queue.h  sync.c
src/os/windows/: sync.c  system.c  system.h
src/platform/unix/: job_queue.c  job_queue.h
src/platform/windows/: system.c  system.h
src/utility/: encoding.c  encoding.h  hash.c  hash.h  job_queue.c  job_queue.h  math.c  math.h
